[package]
name = "system-programing-in-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
chrono = "0.4.19"
flate2 = "1.0.20"
lib = { path = "./lib" }
reqwest = "0.11.4"
serde_json = "1.0.66"
