[package]
name = "system-programing-in-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
chrono = "0.4.19"
csv = "1.1.6"
flate2 = "1.0.20"
lib = { path = "./lib" }
reqwest = "*"
serde_json = "*"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"]}
